[fix] nav alignment mobile

--- a/src/sass/module/_nav.sass
+++ b/src/sass/module/_nav.sass
@@ -14,7 +14,7 @@
   -webkit-overflow-scrolling: touch;
   margin-bottom: -$space
   padding-bottom: $space
-  padding-left: 18px
+  padding-left: 14px
   +mq($bp-sm)
     margin: 0 auto
     padding: 0 0 0 16px
@@ -24,10 +24,9 @@
     padding-left: 26px
 
 .nav_inner::before
-  content: ""
-  display: inline-block
-  width: 2.5%
   +mq($bp-sm)
+    content: ""
+    display: inline-block
     width: 5%
 
 .nav-scrolled
